@@ -1053,7 +1053,7 @@ static void jtagmkII_set_xmega_params(PROGRAMMER * pgm, AVRPART * p)
       u32_to_b4(sendbuf.dd.nvm_boot_offset, m->offset);
     } else if (strcmp(m->desc, "fuse1") == 0) {
       u32_to_b4(sendbuf.dd.nvm_fuse_offset, m->offset & ~7);
-    } else if (strcmp(m->desc, "lock") == 0) {
+    } else if (strncmp(m->desc, "lock", 4) == 0) {
       u32_to_b4(sendbuf.dd.nvm_lock_offset, m->offset);
     } else if (strcmp(m->desc, "usersig") == 0) {
       u32_to_b4(sendbuf.dd.nvm_user_sig_offset, m->offset);
@@ -2250,7 +2250,7 @@ static int jtagmkII_read_byte(PROGRAMMER * pgm, AVRPART * p, AVRMEM * mem,
     addr = 2;
     if (pgm->flag & PGM_FL_IS_DW)
       unsupp = 1;
-  } else if (strcmp(mem->desc, "lock") == 0) {
+  } else if (strncmp(mem->desc, "lock", 4) == 0) {
     cmd[1] = MTYPE_LOCK_BITS;
     if (pgm->flag & PGM_FL_IS_DW)
       unsupp = 1;
@@ -2429,7 +2429,7 @@ static int jtagmkII_write_byte(PROGRAMMER * pgm, AVRPART * p, AVRMEM * mem,
     cmd[1] = MTYPE_USERSIG;
   } else if (strcmp(mem->desc, "prodsig") == 0) {
     cmd[1] = MTYPE_PRODSIG;
-  } else if (strcmp(mem->desc, "lock") == 0) {
+  } else if (strncmp(mem->desc, "lock", 4) == 0) {
     cmd[1] = MTYPE_LOCK_BITS;
     if (pgm->flag & PGM_FL_IS_DW)
       unsupp = 1;
